--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,12 @@
 * {
   margin: 0;
-  -webkit-touch-callout: none; 
+  /* disable text selection  */
+  /* -webkit-touch-callout: none; 
   -webkit-user-select: none;
    -khtml-user-select: none;
      -moz-user-select: none; 
       -ms-user-select: none; 
-          user-select: none; 
+          user-select: none;  */
 }
 
 body {
